frontS3